<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.expenses.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_manageCategoriesFragment"
            app:destination="@id/navigation_manage_categories" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.expenses.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_summary"
        android:name="com.example.expenses.ui.summary.SummaryFragment"
        android:label="@string/title_summary"
        tools:layout="@layout/fragment_summary" />

    <fragment
        android:id="@+id/navigation_manage_categories"
        android:name="com.example.expenses.ui.manage.ManageCategoriesFragment"
        android:label="@string/title_manage_categories"
        tools:layout="@layout/fragment_manage_categories" />

</navigation>