<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.home.HomeFragment">

    <!-- Pole do wpisywania kwoty -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/amount_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Przełącznik Wydatek / Przychód -->
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_group_transaction_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount_input_layout"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/button_expense"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/transaction_type_expense" />

        <Button
            android:id="@+id/button_income"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/transaction_type_income" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <!-- Etykieta i Spinner dla kategorii -->
    <TextView
        android:id="@+id/category_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/category_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggle_group_transaction_type" />

    <!-- Przycisk do dodawania nowej kategorii -->
    <ImageButton
        android:id="@+id/add_category_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/add_new_category"
        android:src="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toBottomOf="@+id/category_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/category_spinner" />

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/category_label"
        app:layout_constraintEnd_toStartOf="@+id/add_category_button"
        app:layout_constraintStart_toEndOf="@+id/category_label"
        app:layout_constraintTop_toTopOf="@+id/category_label" />

    <!-- Pole opisu -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/description_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_spinner">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Przycisk dodawania -->
    <Button
        android:id="@+id/add_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_input_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>